--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "homepage": "https://github.com/minichicken/WebGL#readme",
   "devDependencies": {
+    "@types/node": "^10.11.3",
+    "raw-loader": "^0.5.1",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.1",
     "webpack": "^4.20.2",
