--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   "homepage": "https://github.com/minichicken/WebGL#readme",
   "devDependencies": {
     "@types/node": "^10.11.3",
+    "@types/three": "^0.93.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "^5.2.1",
     "typescript": "^3.1.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "three": "^0.97.0"
   }
 }
